# algeon

./: .gitignore  README.md  build_requirements.txt  environment.yml  install.ps1  linter_requirements.txt  meson.build  pyproject.toml  test_requirements.txt  uninstall.ps1
.spin/: cmds.py
algeon/: algeon.cpp  meson.build
algeon/src/: marraymodule.cpp
numericwiz/: meson.build
numericwiz/matrix/: _typing.py  meson.build
numericwiz/matrix/src/: matrixobject.c  matrixobject.h  matrixop.cpp  mdarraymodule.cpp
numericwiz/matrix/tests/: test_matrixobject.py
nweng/: meson.build
nweng/matrix/: __init__.py  _matypes.py  matrixobject.py  meson.build
nweng/matrix/src/: matrixop.cpp  mdarraymodule.cpp
nweng/matrix/tests/: test_matrixobject.py
nwengine/: algeon.cpp  meson.build
nwengine/matrix/: matrixobject.py  meson.build
nwengine/matrix/src/: mdarraymodule.cpp
nwengine/mdarray/: meson.build
nwengine/mdarray/src/: mdarraymodule.cpp
nwengine/src/: marraymodule.cpp
tools/: lint_diff.ini  linter.py
