[build-system]
build-backend = 'mesonpy'
requires = [
    "Cython>=3.0",
    'meson-python'
]

[project]
name = 'nwengine'
version = '0.0.1'
description = 'Linear Algebra Library!'
readme = 'README.md'
requires-python = '>=3.11'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'K Nitesh Reddy', email = 'knreddy1931@gmail.com'},
]