[build-system]
build-backend = 'mesonpy'
requires = [
    "Cython>=3.0",
    'meson-python'
]

[project]
name = 'numericwiz'
version = '0.0.1'
description = 'Core BackEnd App for Numeric Wizard Application'
# TODO: add `license-files`
readme = 'README.md'
requires-python = '>=3.11'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'K Nitesh Reddy', email = 'knreddy1931@gmail.com'},
]

[tool.spin]
package = 'numericwiz'

[tool.spin.commands]
"Build" = [
  ".spin/cmds.py:build",
  ".spin/cmds.py:test",
  ".spin/cmds.py:lint",
]
"Environments" = [
  "spin.cmds.meson.run", ".spin/cmds.py:ipython",
  ".spin/cmds.py:python", "spin.cmds.meson.gdb"
]